43. still fixing submenu on iphone

--- a/dashboard/css/custom.css
+++ b/dashboard/css/custom.css
@@ -130,3 +130,17 @@
   color: #FFFFFF !important; 
 }
 
+
+
+
+.clickable {
+    cursor: pointer;
+}
+
+.clickme1 {
+         cursor: pointer;
+    }
+
+.clickme2 {
+         cursor: pointer;
+    }
